# acab_config

./: .venv  Makefile  README.md  architecture.md  pyproject.toml  setup.cfg
acab_config/: __init__.py  config.py  config_meta.py  interface.py
acab_config/__tests/: test_config.py  test_modal_hook.py  test_override.py
acab_config/error/: config_error.py  protocol_error.py
acab_config/hooks/: log_hook.py  misc_hooks.py  structure_hook.py
acab_config/utils/: actions.py  attr_gen.py  decorators.py  log_formatter.py  print_logging.py  protocol_guarantee.py
docs/: conf.py  index.rst
