[metadata]
name             = acab_config
version          = 0.0.1
author           = John Grey
author_email     = jgrey.n.plus.one at gmail.com
description      = A Config Singleton which provides load time guarantees
long_description = file:README.md
keywords         = python
license          = ACAB
url              = https://github.com/jgrey4296/acab_config
classifiers      = Programming Language :: Python :: 3.10

[options]
packages = acab_config
# zip_safe = False

## if this is True, and files are included in MANIFEST.in,
## they will be included on build:
## (or use the globs in [options.package_data] without the manifest
# include_package_data = False
#

[options.package_data]
# Add globs as necessary
acab_config =

[options.exclude.package_data]
# Add globs as necessary
acab_config =

[options.entry_points]
#console_scripts =
# an_example = a_package:main
